<resources>
    <string name="app_name">Novel Mobile</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="details">Detail</string>
    <string name="content_description">Image of the Novel</string>
    <string name="author">Penulis</string>
    <string name="publisher">Penerbit</string>
    <string name="year">Tahun Terbit</string>
    <string name="read">Baca Novel</string>
    <string name="about">Tentang Saya</string>
    <string name="name">Indra Mahpudin</string>
    <string name="email">indramahpudin21@gmail.com</string>
</resources>