<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/content_description" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/iv_image"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/iv_image"
            android:layout_below="@id/tv_title"
            android:text="@string/description"
            android:textColor="@color/lightGreyTextColor"
            android:maxLines="3"
            android:ellipsize="end"
            android:textSize="14sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_card"
            android:layout_alignBottom="@id/iv_image"
            android:layout_toEndOf="@id/iv_image"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/details"
            android:textAllCaps="false"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>